<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add_order"
        android:orderInCategory="100"
        android:title="@string/add_order"
        android:icon="@drawable/ic_content_add"
        app:icon="@drawable/ic_content_add"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_evac"
                android:title="@string/evac"/>
            <item
                android:id="@+id/action_pass"
                android:title="@string/pass"/>
            <item
                android:id="@+id/action_cargo"
                android:title="@string/cargo"/>
        </menu>
    </item>
</menu>
