<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:src="@drawable/ic_create_successfully" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/large_margin"
            android:layout_marginLeft="@dimen/default_item_height"
            android:layout_marginRight="@dimen/default_item_height"
            android:text="@string/template_message_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/default_item_height"
            android:layout_marginRight="@dimen/default_item_height"
            android:gravity="center"
            android:text="@string/template_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_save_template"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:background="@drawable/order_button_selector"
            android:text="@string/template_save"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/large_margin" />

        <Button
            android:id="@+id/btn_cancel_template"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:background="@drawable/cancel_button_selector"
            android:text="@string/template_cancel"
            android:textColor="@color/dark_gray_text_tranparent"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin" />
    </LinearLayout>

</RelativeLayout>