<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gallery_item_size"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:src="@drawable/verify_icon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/large_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/verify_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_load_docs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/order_button_selector"
            android:text="@string/load_docs"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_enter_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@drawable/order_reverse_button_selector"
            android:text="@string/enter_code"
            android:textColor="@color/blue_main" />
    </LinearLayout>

</RelativeLayout>